--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,13 @@
     <string name="email_format_error">must enter valid email</string>
     <string name="password_mismatch_error">password does not match</string>
 
+    //toast messages
+    <string name="no_comments">لاتوجد اي تعليقات</string>
+    <string name="must_login_to_post">يجب تسجيل الدخول</string>
+    <string name="check_fields_for_error">check fields for error</string>
+    <string name="comment_sent">تم ارسال التعليق</string>
+
+
 
     <string name="facebook_app_id">245801286410441</string>
     <string name="fb_login_protocol_scheme">fb245801286410441</string>
