--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="must_login_to_post">يجب تسجيل الدخول</string>
     <string name="check_fields_for_error">check fields for error</string>
     <string name="comment_sent">تم ارسال التعليق</string>
+    <string name="login_credentials_wrong">wrong password or email</string>
+    <string name="server_error">something went wrong, try again</string>
 
 
 
